# RockPiMPU

./: .gitmodules  CMakeLists.txt  MPUCali copy.json  README.md  main.cpp
src/: CMakeLists.txt
src/ICM20602/: ICM20602.hpp
src/ICM42605/: ICM42605.hpp
src/MPU6500/: MPU6500.cpp  MPU6500.hpp  filter.h
src/SPI/: LinuxSPI.cpp  LinuxSPI.hpp
